@@ -1,3 +1,11 @@
+2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* actors.cc: Made party member only not call fight_back() if
+		dead and the attacker is a party member. Made fight_back()
+		have the party fight back if in combat mode and one of the
+		party members takes damage.
+	* gamewin.cc: Made paused_combat_select put the attacking party
+		member into combat mode if not already.
+
 2010-12-22 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* browser.cc, keyaction.*, keys.*: Add shape_browser_help
 		key binding that displays the shape browser keys. Shape
